@@ -1,18 +1,15 @@
 package com.andmal.rest;
 
 import com.andmal.mono.MonoTransaction;
-import com.andmal.mono.MonoUser;
 import com.andmal.mono.dto.MonoTransactionDto;
 import com.andmal.repo.MonoUserRepo;
 import io.quarkus.hibernate.reactive.panache.common.WithSession;
 import io.smallrye.mutiny.Uni;
 import jakarta.inject.Inject;
-import jakarta.persistence.PersistenceUnit;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/transactions")
 public class TransResource {
@@ -20,16 +17,20 @@ public class TransResource {
 //    @PersistenceUnit("")
     MonoUserRepo userRepo;
 
+    @WithSession
     @GET
     @Path("")
     @Produces(MediaType.APPLICATION_JSON)
-    public List<MonoTransactionDto> getTransactions(@QueryParam("limit") int limit) {
-        return MonoTransaction.getAll().await().indefinitely().stream().map(tre -> {
-            MonoTransactionDto dto = new MonoTransactionDto();
-            dto.account = tre.account;
-            dto.amount = tre.amount;
-            return dto;
-        }).collect(Collectors.toList());
+    public Uni<List<MonoTransactionDto>> getTransactions(@QueryParam("limit") int limit) {
+        return MonoTransaction.getAll().map(trList -> {
+            var dtoList = trList.stream().map(tre -> {
+                MonoTransactionDto dto = new MonoTransactionDto();
+                dto.account = tre.account;
+                dto.amount = tre.amount;
+                return dto;
+            }).toList().subList(0, limit);
+            return dtoList;
+        });
     }
 
     @WithSession
@@ -47,7 +48,6 @@ public class TransResource {
             dto.when = tre.when;
             return dto;
         });
-//        return userRepo.findById(id).map(t -> t.getName());
     }
 
 
